# qdiscord

./: .gitignore  CMakeLists.txt  README.md  VersionRow.qml  cmake-build.sh  main.cpp  main.qml  me.appadeia.QDiscord.appdata.xml  me.appadeia.QDiscord.json  meson.build  notifier.cpp  notifier.h  qml.qrc  simplifier.h
cbuild/: CMakeCache.txt  Desucordo  Makefile  cmake_install.cmake
cbuild/Desucordo_autogen/: moc_predefs.h
cbuild/Desucordo_autogen/EWIEGA46WW/: qrc_qml.cpp
src/: main.cpp  simplifier.cpp
